[tool.poetry]
name = "pychronus"
version = "1.0.0"
description = ""
authors = ["Jaime M <jaimegm49@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "2.0.1"
google-api-python-client = "1.8.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"
python-binance = "^1.0.12"
psycopg2-binary = "^2.8.6"
cryptography = "^3.3.1"
pandas-gbq = "<0.15.0"
sqlalchemy = "1.3.18"
requests = "^2.20"
pyarrow = "4.0.1"
psycopg2 = "^2.8"
pandas = "^1.2"
Twisted = "^21.7.0"
dbt = "^0.20.2"
ipython = "^7.27.0"
jupyter = "^1.0.0"
jupyterlab = "^3.1.12"
websockets = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
responses = "^0.12"
