[tool.poetry]
name = "pychronus"
version = "1.0.0"
description = ""
authors = ["Jaime M <jaimegm49@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
apache-airflow = {extras = ["google_auth"], version = "2.5.0"}
#google-api-python-client = "1.8.0"
##google-auth-httplib2 = "^0.1.0"
#google-auth-oauthlib = "^0.4.4"
#apache-airflow-providers-postgres = "^2.1.0"
##python-binance = "^1.0.12"
#psycopg2-binary = "^2.8.6"
#cryptography = "^3.3.1"
#pandas-gbq = "<0.15.0"
#pandas = "1.3.5"
#requests = "^2.20"
#ipython = "^7.27.0"
#jupyter = "^1.0.0"
#websockets = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
responses = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["grow_with_the_flow", "tests", "infarm_dags"]
