[tool.poetry]
name = "pychronus"
version = "1.0.0"
description = ""
authors = ["Jaime M <jaimegm49@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google = "^2.0"
google-auth = "^2.9.1"
google-api-core = "^2.8.2"
google-cloud-core = "^2.3.2"
google-cloud-storage = "2.14.0"
google-cloud-bigquery = "^3.2.0"
google-api-python-client = ">=1.6.0,<2.0.0"
google-cloud-bigquery-storage = "^2"
requests = "^2.20"
apache-airflow = {extras = ["google_auth"], version = "2.8.0"}
apache-airflow-providers-postgres = "^2.1.0"
apache-airflow-providers-google = "10.13.1"
#apache-airflow-providers-mysql = "^2"
apache-airflow-providers-ssh = "^2"
Flask-Admin = "^1.5.7"
openpyxl = "^3.0.7"
psycopg2-binary = "^2.8.6"
pandas-gbq = "<0.15.0"
pandas = "1.3.5"
oauth2client = "^4.1.3"
#pandas-gbq = "0.20.0"
ipython = ">=8.4.0"
cryptography = "^37.0.4"
regex = "2022.7.9"
#werkzeug = "2.1.2"
#jupyter = "^1.0.0"
geoalchemy2 = "^0.13.1"
wheel = "^0.38.4"
ipywidgets = "^8.0.4"
geopandas = "^0.13.2"
pyarrow = "^11.0.0"
pyyaml = "^6.0"
apache-airflow-providers-docker = "^3.5.1"
notebook = "^7.0.2"
pendulum = ">=2.0.0,<2.1.0"
flask-session = "<0.6"
#connexion = "2.14.2"
geojson = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
responses = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["grow_with_the_flow", "tests", "infarm_dags"]
